kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: void-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: void
  template:
    metadata:
      labels:
        app: void
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: void-files-pvc
        - name: config
          persistentVolumeClaim:
            claimName: void-config-pvc
      containers:
        - name: void
          image: grimreapermortis/void:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          volumeMounts:
            - name: storage
              mountPath: /var/www/files
              readOnly: false
            - name: config
              mountPath: /etc/nginx/htpasswd
              readOnly: true
