kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: void-service
  namespace: demo
spec:
  selector:
    app: void
  ports:
    - port: 8003
  type: LoadBalancer
